Изменил margins, сделал отображение услуг в виде списка

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="text_title_category_employee">Категория оказываемых услуг</string>
     <string name="text_title_select_category">Выберите категорию услуг</string>
     <string name="text_change_categories">Изменить</string>
+    <string name="title_complete_text_view">Выполнение:</string>
 </resources>
