--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="text_title_select_category">Выберите категорию услуг</string>
     <string name="text_change_categories">Изменить</string>
     <string name="title_complete_text_view">Выполнение:</string>
+    <string name="title_complete_services">Выполнение:</string>
 </resources>
